--- a/foodEvents.html
+++ b/foodEvents.html
@@ -377,7 +377,9 @@
                     <div class="col-md-4 col-12">
                         <div class="event-card ">
                             <img src="./assets/img/event1.png" alt="event1" class="img-fluid">
-                            <h5>The Construction Company Congress</h5>
+                            <h5>
+                                <a href="https://the-construction-home.vercel.app/"> The Construction Company Congress</a>
+                            </h5>
                             <div class="card-body">
                                 <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
                             </div>
@@ -386,7 +388,7 @@
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
                             <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
+                                <a href="https://the-construction-home.vercel.app/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
                         </div>
@@ -394,7 +396,9 @@
                     <div class="col-md-4 col-12">
                         <div class="event-card">
                             <img src="./assets/img/event2.png" alt="event2" class="img-fluid">
-                            <h5>The Food <br> Company Congress</h5>
+                            <h5>
+                                <a href="https://food-page-delta.vercel.app/">The Food <br> Company Congress</a>
+                            </h5>
                             <div class="card-body">
                                 <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
                             </div>
@@ -403,7 +407,7 @@
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
                             <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
+                                <a href="https://food-page-delta.vercel.app/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
                         </div>
@@ -411,7 +415,9 @@
                     <div class="col-md-4 col-12">
                         <div class="event-card">
                             <img src="./assets/img/event3.png" alt="event3" class="img-fluid">
-                            <h5>The Architect Company Congress</h5>
+                            <h5>
+                                <a href="https://datamatixgroup.com/Conference/ARCHITECT/">The Architect Company Congress</a>
+                            </h5>
                             <div class="card-body">
                                 <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
                             </div>
@@ -420,7 +426,7 @@
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
                             <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
+                                <a href="https://datamatixgroup.com/Conference/ARCHITECT/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
                         </div>
@@ -428,7 +434,9 @@
                     <div class="col-md-4 col-12">
                         <div class="event-card ">
                             <img src="./assets/img/event4.png" alt="event4" class="img-fluid">
-                            <h5>The Building Materials Congress</h5>
+                            <h5>
+                                <a href="https://datamatixgroup.com/Conference/building/">The Building Materials Congress</a>
+                            </h5>
                             <div class="card-body">
                                 <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
                             </div>
@@ -437,7 +445,26 @@
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
                             <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
+                                <a href="https://datamatixgroup.com/Conference/building/">FOR REGISTRATION</a>
+                                <i class="ri-arrow-right-s-line ms-2"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-12">
+                        <div class="event-card ">
+                            <img src="./assets/img/event1.png" alt="event1" class="img-fluid">
+                            <h5>
+                                <a href="https://the-construction-home.vercel.app/"> The Construction Company Congress</a>
+                            </h5>
+                            <div class="card-body">
+                                <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
+                            </div>
+                            <div class="card-footer">
+                                <h6>MARCH 23, 2022</h6>
+                                <p>Dubai, United Arab Emirates</p>
+                            </div>
+                            <button class="btn btn-success">
+                                <a href="https://the-construction-home.vercel.app/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
                         </div>
@@ -445,7 +472,9 @@
                     <div class="col-md-4 col-12">
                         <div class="event-card">
                             <img src="./assets/img/event2.png" alt="event2" class="img-fluid">
-                            <h5>The Food <br> Company Congress</h5>
+                            <h5>
+                                <a href="https://food-page-delta.vercel.app/">The Food <br> Company Congress</a>
+                            </h5>
                             <div class="card-body">
                                 <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
                             </div>
@@ -454,7 +483,7 @@
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
                             <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
+                                <a href="https://food-page-delta.vercel.app/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
                         </div>
@@ -462,7 +491,9 @@
                     <div class="col-md-4 col-12">
                         <div class="event-card">
                             <img src="./assets/img/event3.png" alt="event3" class="img-fluid">
-                            <h5>The Architect Company Congress</h5>
+                            <h5>
+                                <a href="https://datamatixgroup.com/Conference/ARCHITECT/">The Architect Company Congress</a>
+                            </h5>
                             <div class="card-body">
                                 <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
                             </div>
@@ -471,7 +502,7 @@
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
                             <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
+                                <a href="https://datamatixgroup.com/Conference/ARCHITECT/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
                         </div>
@@ -479,7 +510,9 @@
                     <div class="col-md-4 col-12">
                         <div class="event-card ">
                             <img src="./assets/img/event4.png" alt="event4" class="img-fluid">
-                            <h5>The Building Materials Congress</h5>
+                            <h5>
+                                <a href="https://datamatixgroup.com/Conference/building/">The Building Materials Congress</a>
+                            </h5>
                             <div class="card-body">
                                 <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
                             </div>
@@ -488,15 +521,17 @@
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
                             <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
+                                <a href="https://datamatixgroup.com/Conference/building/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
                         </div>
                     </div>
                     <div class="col-md-4 col-12">
-                        <div class="event-card">
-                            <img src="./assets/img/event2.png" alt="event2" class="img-fluid">
-                            <h5>The Food <br> Company Congress</h5>
+                        <div class="event-card ">
+                            <img src="./assets/img/event1.png" alt="event1" class="img-fluid">
+                            <h5>
+                                <a href="https://the-construction-home.vercel.app/"> The Construction Company Congress</a>
+                            </h5>
                             <div class="card-body">
                                 <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
                             </div>
@@ -505,39 +540,23 @@
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
                             <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
+                                <a href="https://the-construction-home.vercel.app/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
                         </div>
                     </div>
-                    <div class="col-md-4 col-12">
-                        <div class="event-card">
-                            <img src="./assets/img/event3.png" alt="event3" class="img-fluid">
-                            <h5>The Architect Company Congress</h5>
-                            <div class="card-body">
-                                <p>About 4-decades ago, the institute embarked on a global excellence development journey to accelerate the leadership and organizational development goals of the middle east region and</p>
-                            </div>
-                            <div class="card-footer">
-                                <h6>MARCH 23, 2022</h6>
-                                <p>Dubai, United Arab Emirates</p>
-                            </div>
-                            <button class="btn btn-success">
-                                <a href="/">FOR REGISTRATION</a>
-                                <i class="ri-arrow-right-s-line ms-2"></i>
-                            </button>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
 
-        <div class="container">
+        <!-- <div class="container">
             <h2 class="banner_title text-center" style="margin: 30px auto;">
                 Benchmarking and supporting government and business entities to reach the highest international standards</h2>
-        </div> 
+        </div>  -->
 
         <!-- start gallery -->
-        <div class="gallery">
+        <!-- <div class="gallery">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -565,7 +584,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- end gallery -->
 
         <!-- start footer -->
